--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
-Flask==0.10.1
-pycco
-Flask-Login==0.2.6
-Flask-SQLAlchemy==1.0
-Flask-WTF==0.8.4
-Jinja2==2.7.1
-MarkupSafe==0.18
-SQLAlchemy==0.8.2
-WTForms==1.0.4
-Werkzeug==0.9.3
-distribute==0.6.34
-flask-heroku==0.1.4
-itsdangerous==0.23
-requests==1.2.3
-gunicorn==17.5
-wsgiref==0.1.2
-Flask-Testing==0.4
-mock==1.0.1
-ipdb==0.8
+alembic (0.7.7)
+argparse (1.2.1)
+distribute (0.6.34)
+Flask (0.10.1)
+flask-heroku (0.1.4)
+Flask-Login (0.2.6)
+Flask-Migrate (1.5.0)
+Flask-Script (2.0.5)
+Flask-SQLAlchemy (1.0)
+Flask-Testing (0.4)
+Flask-WTF (0.8.4)
+gunicorn (17.5)
+ipdb (0.8)
+ipython (3.2.1)
+itsdangerous (0.23)
+Jinja2 (2.7.1)
+Mako (1.0.1)
+Markdown (2.6.2)
+MarkupSafe (0.18)
+mock (1.0.1)
+pip (1.5.4)
+Pycco (0.3.0)
+Pygments (2.0.2)
+pystache (0.5.4)
+requests (1.2.3)
+setuptools (2.2)
+smartypants (1.8.6)
+SQLAlchemy (0.8.2)
+twill (1.8.0)
+Werkzeug (0.9.3)
+wsgiref (0.1.2)
+WTForms (1.0.4)
